k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    name: todo
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
