k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo
spec:
  ingressClassName: traefik
  rules:
    - host: todo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 5000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: todo-ingress
#   namespace: todo
# spec:
#   ingressClassName: traefik
#   rules:
#     - host: todo.local
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: todo-service
#                 port:
#                   number: 5000
